--- a/airport_app/.github/workflows/ci.yml
+++ b/airport_app/.github/workflows/ci.yml
@@ -1,15 +1,26 @@
 # Yaml configuration file definition for git hub actions
 name: TEST
-on: push
+
+on:
+  push:
+    branches:
+      - main
 
 jobs:
-    test_project:
-        runs-on: windows-latest
+  test_project:
+    runs-on: windows-latest
 
-        steps:
-            - name: Checkout repository
-              uses: actions/checkout@v2 
-            - run: 
-                python -m pip install --upgrade pip
-                pip3 install -r requirements.txt
-                python manage.py test
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Run tests
+        run: python manage.py test
