--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r airport_app/requirements.txt
 
       - name: Run tests
-        run: python manage.py test
+        run: python airport_app/manage.py test
