--- a/airport_app/docker-compose.yml
+++ b/airport_app/docker-compose.yml
@@ -3,14 +3,16 @@ services:
     # Postgres predefined image
     image: postgres:latest
     environment:
-      - POSTGRES_PASSWORD=@HarmonHealth
-      - POSTGRES_USER=peter_coder    
-      - POSTGRES_DB=Airport_database
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_DB=${POSTGRES_DB}
     volumes:
       - postgres_data:/var/lib/postgresql/data  
   web:
     # Using our dockerfile
     build: .
+    env_file:
+      - .env
     # Connecting my development machine to the container
     volumes:
       - .:/usr/src/app
