--- a/airport_app/docker-compose.yml
+++ b/airport_app/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   db: 
     # Postgres predefined image
-    image: postgres:latest
+    image: postgres:17
     environment:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_USER=${POSTGRES_USER}
